<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">i会计</string>
    <string name="action_settings">Settings</string>
    <string name="register_name">立即注册</string>
    <string name="register_title">注册</string>
    <string name="code">账号</string>
    <string name="code_hint">请在此输入您的账号</string>
    <string name="password">密码</string>
    <string name="password_hint">请在此输入您的密码</string>
    <string name="password_sure">确认密码</string>
    <string name="password_sure_hint">请再次输入您的密码</string>
    <string name="idcode">身份证号</string>
    <string name="idcode_hint">请输入您的身份证号码</string>
    <string name="name">真实姓名</string>
    <string name="name_hint">请输入您的真实姓名</string>
    <string name="company">公司名称</string>
    <string name="company_hint">请输入您的公司名称</string>
    <string name="job">职务</string>
    <string name="job_accounting">会计</string>
    <string name="job_manager">主管</string>
    <string name="question">密保问题</string>
    <string name="answer">答案</string>
    <string name="answer_hint">请输入您的密保问题答案</string>
    <string name="login_name">登录</string>
    <string name="forget">忘记密码？</string>
    <string name="find">找回密码</string>
    <string name="submit">提交</string>
    <string name="reg_code_hint">账号格式：3-16位字符</string>
    <string name="reg_password_hint">密码格式：6-16位字符</string>
    <string name="record_voucher">录凭证</string>
    <string name="inquire_voucher">查凭证</string>
    <string name="books">账簿</string>
    <string name="tables">报表</string>
    <string name="bill">结账</string>
    <string name="setting">设置</string>
    <string name="hello">你好！</string>
    <string name="zhangtaoTitle">创建账套，开始您的会计之旅吧！</string>
    <string name="zhangtaoCpname">公司名称：</string>
    <string name="zhangtaoBwb">本位币：</string>
    <string name="zhangtaoZhidu">会计制度：</string>
    <string name="zhangtaoSetup">开始创建</string>
    <string name="sureUsername">确认账号</string>
    <string name="hintUsername">请先确认输入账号</string>
    <string name="find_code_text">您的账号</string>
    <string name="find_answer">您的答案</string>
    <string name="logout">注销</string>

    <drawable name="rec_normal">#9A32CD</drawable>
    <drawable name="inq_normal">#9ACD32</drawable>
    <drawable name="books_normal">#CD661D</drawable>
    <drawable name="tables_normal">#CD00CD</drawable>
    <drawable name="bill_normal">#FFA500</drawable>
    <drawable name="set_normal">#FFFF00</drawable>
    <drawable name="pressed">#6495ED</drawable>
    <drawable name="text_normal">#66CD00</drawable>
    <drawable name="book_normal">#FFFFFF</drawable>

    <color name="text_normal">#00CD00</color>
    <color name="pressed">#0000CD</color>

    <string name="title_activity_function">FunctionActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_zhangtao">ZhangtaoActivity</string>
    <string name="title_activity_books">请选择账簿类型</string>
    <string name="books_detail">明细账</string>
    <string name="books_all">总账</string>
    <string name="books_balance">科目余额表</string>
    <string name="tables_balance">资产负债表</string>
    <string name="tables_incom">利润表</string>
    <string name="setting_voucher">凭证字</string>
    <string name="setting_initial">财务初始余额</string>
    <string name="setting_initialization">重新初始化</string>
    <string name="title_activity_setting">设置</string>
    <string name="title_activity_table">请选择报表类型</string>
    <string name="title_activity_mingxizhang">MingxizhangActivity</string>
    <string name="title_activity_jizhangpingzheng">JizhangpingzhengActivity</string>
    <string name="title_activity_zongzhang">ZongzhangActivity</string>
    <string name="title_activity_kemuyuebiao">KemuyuebiaoActivity</string>
    <string name="title_activity_setting__initial">请选择科目类型</string>
    <string name="assets">资产</string>
    <string name="liabilities">负债</string>
    <string name="rights">权益</string>
    <string name="costs">成本</string>
    <string name="save">保存</string>
    <string name="title_activity_setting__initial__assets">Setting_Initial_AssetsActivity</string>
    <string name="title_activity_setting__initial__costs">Setting_Initial_CostsActivity</string>
    <string name="title_activity_setting__initial__rights">Setting_Initial_RightsActivity</string>
    <string name="title_activity_setting__initial__liabilities">Setting_Initial_LiabilitiesActivity</string>
    <string name="title_activity_chaxunpingzheng">ChaxunpingzhengActivity</string>
    <string name="title_activity_chaxunpingzhengsh">ChaxunpingzhengshActivity</string>
    <string name="title_activity_zichanfuzhaibiao">ZichanfuzhaibiaoActivity</string>
    <string name="title_activity_lirunbiao">LirunbiaoActivity</string>
    <string name="title_activity_exchange_rate">ExchangeRateActivity</string>
    <string name="title_activity_setting__initialization">重新初始化</string>
    <string name="setting__initialization1">重新初始化系统将会清空你录入的所有数据，请慎重！</string>
    <string name="setting__initialization2">-系统将删除您新增的所有科目</string>
    <string name="setting__initialization3">-系统将删除您录入的所有凭证</string>
    <string name="setting__initialization4">-系统将删除您录入的所有初始化数据</string>
    <string name="setting__initialization5">我已清楚了解将产生的后果</string>
    <string name="setting__initialization6">重新初始化</string>
    <string name="setting__initialization7">放弃</string>
    <string name="setting__initialization8">（请先确认并勾选“我已清楚了解将产生的后果”）</string>

</resources>
