<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".RegisterActivity" >

    <TextView 
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingTop="15dp"
        android:gravity="center"
        android:text="@string/register_title"
        android:textColor="#009ACD"
        android:textSize="30sp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_gravity="right"
                android:text="@string/code"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="right"
                android:text="@string/password"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="right"
                android:text="@string/password_sure"
                android:textColor="#009ACD"
                android:textSize="15sp"/>                
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="right"
                android:text="@string/name"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="right"
                android:text="@string/idcode"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:layout_gravity="right"
                android:text="@string/company"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="17dp"
                android:layout_gravity="right"
                android:text="@string/job"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="right"
                android:text="@string/question"
                android:textColor="#009ACD"
                android:textSize="15sp"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_gravity="right"
                android:text="@string/answer"
                android:textColor="#009ACD"
                android:textSize="15sp" />           
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <EditText 
                android:id="@+id/etCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="16"          
                android:inputType="text"
                android:textColor="#009ACD"
                android:hint="@string/reg_code_hint"
                android:textSize="15sp"/>
            <EditText 
                android:id="@+id/etPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:inputType="textPassword"
                android:textColor="#009ACD"
                android:hint="@string/reg_password_hint"
                android:textSize="15sp"/>
            <EditText 
                android:id="@+id/etSurePassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="16"
                android:inputType="textPassword"
                android:textColor="#009ACD"
                android:hint="@string/password_sure_hint"
                android:textSize="15sp"
                android:enabled="false"/>
            <EditText 
                android:id="@+id/etName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:inputType="text"
                android:textColor="#009ACD"
                android:hint="@string/name_hint"
                android:textSize="15sp"/>
            <EditText 
                android:id="@+id/etIDcard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="18"
                android:inputType="text"
                android:textColor="#009ACD"
                android:hint="@string/idcode_hint"
                android:digits="1234567890Xx"
                android:textSize="15sp"/>
            <EditText 
                android:id="@+id/etCompany"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:inputType="text"
                android:textColor="#009ACD"
                android:hint="@string/company_hint"
                android:textSize="15sp" />
            <Spinner 
                android:id="@+id/spnJob"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/job"/>
            <Spinner 
                android:id="@+id/spnQuestion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:entries="@array/question"/>
            <EditText 
                android:id="@+id/etAnswer"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:maxLength="20"
                android:inputType="text"
                android:textColor="#009ACD"
                android:hint="@string/answer_hint"
                android:textSize="15sp"
            />
        </LinearLayout>
        
        <LinearLayout 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            
            <ImageView 
                android:id="@+id/ivCodeCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivPasswordCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivSurepasswordCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivNameCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivIDCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivCompanyCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivJobCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivQuestionCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
            <ImageView 
                android:id="@+id/ivAnswerCheck"
                android:layout_width="wrap_content"
                android:layout_height="36dp"/>
        </LinearLayout>
        
    </LinearLayout>
    
    <Button 
        android:id="@+id/btnRegister"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/register_name"
        android:textColor="#009ACD"
        android:onClick="doRegister"
        />

</LinearLayout>
