<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    android:background="@drawable/bg2"
    tools:context=".LoginActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_name" 
        android:layout_gravity="center_horizontal"
        android:textColor="#009ACD"
        android:textSize="35sp"
        android:paddingTop="50dp"
        />
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/code"
            android:textColor="#009ACD"
            android:textSize="17sp"
             />
        <EditText 
            android:id="@+id/etCodeLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="text"
            android:textColor="#009ACD"
            android:hint="@string/code_hint"
            android:textSize="17sp"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register_name"
            android:textColor="@color/textcolor_selector"
            android:textSize="13sp"
            android:clickable="true"
            android:onClick="goRegister"
            />
    </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="5dp"
            android:text="@string/password"
            android:textColor="#009ACD"
            android:textSize="17sp"
             />
        <EditText 
            android:id="@+id/etPasswordLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:textColor="#009ACD"
            android:hint="@string/password_hint"
            android:textSize="17sp"
            />
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget"
            android:textColor="@color/textcolor_selector"
            android:textSize="13sp"
            android:clickable="true"
            android:onClick="goFindPassword"
            />
    </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:onClick="doLogin"
        android:text="@string/login_name"
        android:textColor="#009ACD"
        android:layout_gravity="center_horizontal"
         />

</LinearLayout>
